--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
             <div class="card-berita">
                 <div class="card" data-title="Film Ip Man"
                     data-content="Ip Man (Hanzi: 叶问 / 葉問) adalah sebuah film seni bela diri Hong Kong tahun 2008 berdasarkan kehidupan Ip Man, seorang grandmaster seni bela diri Wing Chun dan guru legenda seniman bela diri Bruce Lee. Film ini berfokus pada peristiwa dalam kehidupan Ip yang diduga terjadi di kota Foshan selama Perang Tiongkok-Jepang. Film ini disutradarai oleh Wilson Yip, dan dibintangi oleh Donnie Yen sebagai karakter utama, dengan koreografi seni bela diri oleh Sammo Hung. Film ini dibintangi oleh Simon Yam, Lynn Hung, Lam Ka-tung, Xing Yu, Hiroyuki Ikeuchi, dan Tenma Shibuya. Film ini merupakan produksi bersama antara China dan Hong Kong, dan merupakan film terakhir yang didistribusikan oleh Mandarin Films."
-                    data-image="image/ip.webp">
+                    data-image="image/ip.webp" data-link="detail/ip-man.html">
                     <img src="image/ip.webp" alt="Politik">
                     <h3>Ip Man</h3>
                 </div>
 
                 <div class="card" data-title="Ekonomi" data-content="Informasi ekonomi, pasar, dan bisnis terkini."
-                    data-image="image/kkn.jpg">
+                    data-image="image/kkn.jpg" data-link="detail/kkn.html">
                     <img src="image/kkn.jpg" alt="Ekonomi">
                     <h3>KKN Desa Penari</h3>
                 </div>
 
                 <div class="card" data-title="Hukum"
                     data-content="Liputan mendalam tentang hukum, keadilan, dan kasus penting."
-                    data-image="image/1131w-TrbqaWjvEpM.webp">
+                    data-image="image/1131w-TrbqaWjvEpM.webp" data-link="detail/ip-man.html">
                     <img src="image/1131w-TrbqaWjvEpM.webp" alt="Hukum">
                     <h3>Hukum</h3>
                 </div>
@@ -77,8 +77,13 @@
             <div class="card-detail">
                 <div class="detail-image"></div>
                 <div class="detail-text">
-                    <p>Klik salah satu card untuk melihat detail.</p>
+                    <h2 class="detail-title"></h2>
+                    <p class="detail-content"></p>
+                    <div class="detail-action"></div>
                 </div>
+            </div>
+            <div class="info">
+                
             </div>
         </div>
         <div class="iklan">
