--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Document</title>
+    <title>Lampost</title>
 </head>
 
 <body>
@@ -14,7 +15,9 @@
         <div class="logo">
             <img src="image/lampost300.png (1).webp" alt="image" class="logo-img">
             <ul>
-                <li><a href="#"><i class="bi bi-three-dots-vertical"></i>Menu</a></li>
+                <li><a href="#" id="btnMenu">
+                        <i class="bi bi-three-dots-vertical"></i> Menu
+                    </a></li>
                 <li><a href="#">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
                 <li><a href="#">Lampost</a></li>
@@ -41,6 +44,25 @@
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
+    <div id="overlay" class="overlay"></div>
+
+    <!-- Sidebar -->
+    <div id="sidebar" class="sidebar">
+        <center>
+            <h2>Menu</h2>
+        </center>
+        <div class="search-sidebar">
+            <input type="search" class="search-input" placeholder="Cari Artikel Disini" aria-label="Search">
+        </div>
+        <div class="sidebar-isi">
+            <ul>
+                <li><a href="#"><i class="bi bi-image-fill"></i> Foto</a></li>
+                <li><a href="#"><i class="bi bi-camera-video"></i> Vidio</a></li>
+                <li><a href="#"><i class="bi bi-mic"></i> Podcase</a></li>
+                <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="container">
         <div class="berita">
             <h2>Harian</h2>
@@ -53,7 +75,8 @@
                     <h3>Ip Man</h3>
                 </div>
 
-                <div class="card" data-title="Ekonomi" data-content="Informasi ekonomi, pasar, dan bisnis terkini."
+                <div class="card" data-title="Ekonomi"
+                    data-content="Film ini diangkat dari kisah nyata yang viral di media sosial, khususnya Twitter, dan telah tayang di bioskop sejak 30 April 2022. Cerita berfokus pada enam mahasiswa: Nur, Widya, Ayu, Bima, Anton, dan Wahyu, yang melaksanakan KKN di sebuah desa terpencil di Jawa Timur. Mereka mendapatkan izin dari orang tua dan kepala desa, Pak Prabu, yang memperingatkan mereka untuk tidak melewati batas gapura terlarang yang membatasi desa dengan hutan bernama Tapak Tilas."
                     data-image="image/kkn.jpg" data-link="detail/kkn.html">
                     <img src="image/kkn.jpg" alt="Ekonomi">
                     <h3>KKN Desa Penari</h3>
@@ -83,7 +106,46 @@
                 </div>
             </div>
             <div class="info">
-                
+                <a href="#">
+                    <img src="image/elon.jpeg" alt="image">
+                    <div class="info-berita">
+                        <p>Dunia</p>
+                        <h3>Elon Musk Heran Sama Matahari Buatan: Borosin Uang!</h3>
+                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="image/banjir.webp" alt="image">
+                    <div class="info-berita">
+                        <p>Bencana</p>
+                        <h3>Update Korban Banjir di Sumatra: 1.138 Meninggal, 163 Hilang</h3>
+                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="image/elon.jpeg" alt="image">
+                    <div class="info-berita">
+                        <p>Dunia</p>
+                        <h3>Elon Musk Heran Sama Matahari Buatan: Borosin Uang!</h3>
+                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="image/balam.jpg" alt="image">
+                    <div class="info-berita">
+                        <p>Harian</p>
+                        <h3>Selasa, 30 Desember 2025, Cuaca Lampung Cerah Berawan Berpotensi Hujan</h3>
+                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="image/elon.jpeg" alt="image">
+                    <div class="info-berita">
+                        <p>Dunia</p>
+                        <h3>Elon Musk Heran Sama Matahari Buatan: Borosin Uang!</h3>
+                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="iklan">
