ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -160,6 +160,47 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="sosmed">
+            <a href="#"><i class="bi bi-instagram"></i>Instagram</a>
+            <a href="#"><i class="bi bi-facebook"></i>Fecebook</a>
+            <a href="#"><i class="bi bi-twitter-x"></i></i>Twitter</a>
+            <a href="#"><i class="bi bi-tiktok"></i>Tiktok</a>
+        </div>
+        <div class="footer-container">
+
+            <div class="footer-left">
+                <center>
+                    <p>Affiliated with:</p>
+                </center>
+                <img src="image/media.webp" alt="Logo">
+            </div>
+
+            <div class="footer-center">
+                <h4>Sitemap</h4>
+                <a href="#">Beranda</a>
+                <a href="#">Tentang Kami</a>
+                <a href="#">Compro</a>
+                <a href="#">Ilkan</a>
+                <a href="#">Microsite</a>
+                <a href="#">RRS</a>
+                <a href="#">Pedoman Media Siber</a>
+            </div>
+        </div>
+
+        <!-- Footer bawah -->
+        <div class="footer-bottom">
+            <h4>Tentang Kami</h4>
+            <p>Alamat</p>
+            <p>Jl. Soekarno – Hatta No.108, Hajimena, Lampung Selatan</p>
+            <p>Email</p>
+            <p>redaksi@lampost.co</p>
+            <p>Telpon</p>
+            <p>(0721) 783693 (hunting), 773888 (redaksi)</p>
+            <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
+        </div>
+    </footer>
+
 
     <script src="scrip.js"></script>
 </body>
