--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li><a href="#" id="btnMenu">
                         <i class="bi bi-three-dots-vertical"></i> Menu
                     </a></li>
-                <li><a href="#">Harian</a></li>
+                <li><a href="index.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="#">Lampost</a></li>
+                <li><a href="halaman.html">Lampost</a></li>
             </ul>
         </div>
         <div class="button-user">
