--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="image/lampost300.png (1).webp" alt="image" class="logo-img">
             <ul>
                 <li><a href="#" id="btnMenu">
-                        <i class="bi bi-three-dots-vertical"></i> Menu
+                        <i class="bi bi-list"></i> Menu
                     </a></li>
                 <li><a href="index.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
@@ -26,6 +26,10 @@
         <div class="button-user">
             <a href="#" class="langganan">Langganan</a>
             <a href="#" class="login"><i class="bi bi-person-circle"></i>Masuk</a>
+            <a href="#" class="login-mobile"><i class="bi bi-person-circle"></i></a>
+            <a href="#" id="btnMenu" class="menu-mobile">
+                <i class="bi bi-list"></i>
+            </a>
         </div>
     </nav>
 
