--- a/halaman.html
+++ b/halaman.html
@@ -70,63 +70,25 @@
     </div>
     <div class="container">
         <div class="berita" id="berita">
-            <h1 class="judul-berita">
-                Transformasi Kecerdasan Buatan Mendorong Perubahan Besar di Berbagai Sektor
-            </h1>
+            <h1 class="judul-berita"></h1>
 
             <p class="meta-berita">
-                Oleh <strong>Lampost</strong> | Selasa, 6 Januari 2026
+                Oleh <strong>Lampost</strong> |
+                <span id="tanggal"></span>
                 <button id="voiceToggle" class="voice-btn">
                     <i class="bi bi-volume-up"></i>
                 </button>
             </p>
 
-            <img src="image/ai.jpg" alt="Transformasi Teknologi AI" class="gambar-berita">
+            <img class="gambar-berita">
 
-            <p class="isi-berita">
-                Kecerdasan buatan atau <em>Artificial Intelligence</em> (AI) kini menjadi salah satu
-                teknologi paling berpengaruh dalam mendorong transformasi digital di berbagai sektor.
-                Dalam beberapa tahun terakhir, pemanfaatan AI mengalami peningkatan signifikan,
-                terutama pada bidang industri, kesehatan, pendidikan, serta layanan publik.
-            </p>
+            <div class="isi-berita"></div>
 
-            <p class="isi-berita">
-                Di sektor industri, AI dimanfaatkan untuk meningkatkan efisiensi produksi melalui
-                otomatisasi proses, analisis data secara real-time, serta pemeliharaan prediktif
-                pada mesin-mesin produksi. Teknologi ini memungkinkan perusahaan untuk menekan
-                biaya operasional sekaligus meningkatkan kualitas produk.
-            </p>
-
-            <p class="isi-berita">
-                Sementara itu, dalam bidang kesehatan, penerapan AI telah membantu tenaga medis
-                dalam mendiagnosis penyakit secara lebih akurat. Sistem berbasis AI mampu menganalisis
-                data medis seperti hasil pencitraan dan rekam medis pasien, sehingga mempercepat
-                proses pengambilan keputusan klinis dan meningkatkan peluang kesembuhan pasien.
-            </p>
-
-            <p class="isi-berita">
-                Di dunia pendidikan, kecerdasan buatan mulai diterapkan dalam sistem pembelajaran
-                adaptif yang menyesuaikan materi dengan kemampuan masing-masing peserta didik.
-                Hal ini dinilai mampu meningkatkan efektivitas belajar serta memberikan pengalaman
-                pembelajaran yang lebih personal.
-            </p>
-
-            <p class="isi-berita">
-                Meski membawa banyak manfaat, perkembangan AI juga menimbulkan berbagai tantangan,
-                terutama terkait etika, keamanan data, serta dampak terhadap tenaga kerja.
-                Para pakar menekankan pentingnya regulasi yang jelas agar pemanfaatan AI tetap
-                berada dalam koridor yang bertanggung jawab dan berkelanjutan.
-            </p>
-
-            <p class="isi-berita">
-                Pemerintah bersama pelaku industri dan akademisi diharapkan dapat bekerja sama
-                dalam merumuskan kebijakan yang mendukung inovasi, sekaligus melindungi kepentingan
-                masyarakat luas. Dengan pendekatan yang tepat, AI diyakini mampu menjadi motor
-                penggerak pertumbuhan ekonomi dan kemajuan teknologi di masa depan.
-            </p>
-
-            <a href="#" class="baca-selengkapnya">Baca berita terkait lainnya</a>
+            <a href="index.html" class="baca-selengkapnya">
+                Baca berita terkait lainnya
+            </a>
         </div>
+
 
         <div class="iklan">
             <div class="tagar">
@@ -182,6 +144,7 @@
     </footer>
     <script src="scrip.js"></script>
     <script src="voice.js"></script>
+    <script src="detail.js"></script>
 </body>
 
 </html>
