--- a/index.html
+++ b/index.html
@@ -110,46 +110,7 @@
                 </div>
             </div>
             <div class="info">
-                <a href="#">
-                    <img src="image/elon.jpeg" alt="image">
-                    <div class="info-berita">
-                        <p>Dunia</p>
-                        <h3>Elon Musk Heran Sama Matahari Buatan: Borosin Uang!</h3>
-                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
-                    </div>
-                </a>
-                <a href="#">
-                    <img src="image/banjir.webp" alt="image">
-                    <div class="info-berita">
-                        <p>Bencana</p>
-                        <h3>Update Korban Banjir di Sumatra: 1.138 Meninggal, 163 Hilang</h3>
-                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
-                    </div>
-                </a>
-                <a href="#">
-                    <img src="image/elon.jpeg" alt="image">
-                    <div class="info-berita">
-                        <p>Dunia</p>
-                        <h3>Elon Musk Heran Sama Matahari Buatan: Borosin Uang!</h3>
-                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
-                    </div>
-                </a>
-                <a href="#">
-                    <img src="image/balam.jpg" alt="image">
-                    <div class="info-berita">
-                        <p>Harian</p>
-                        <h3>Selasa, 30 Desember 2025, Cuaca Lampung Cerah Berawan Berpotensi Hujan</h3>
-                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
-                    </div>
-                </a>
-                <a href="#">
-                    <img src="image/elon.jpeg" alt="image">
-                    <div class="info-berita">
-                        <p>Dunia</p>
-                        <h3>Elon Musk Heran Sama Matahari Buatan: Borosin Uang!</h3>
-                        <h4>Baca Selengkapnya <i class="bi bi-arrow-right"></i></h4>
-                    </div>
-                </a>
+
             </div>
         </div>
         <div class="iklan">
@@ -207,6 +168,7 @@
 
 
     <script src="scrip.js"></script>
+    <script src="api.js"></script>
 </body>
 
 </html>
