--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     <nav class="navbar-sub">
         <ul>
             <li><a href="#">Politik</a></li>
-            <li><a href="#">Hukum</a></li>
+             <li class="has-sub">
+    <a href="#">Pendidikan</a>
+    <ul class="sub-menu" id="sub-pendidikan">
+      <!-- SUB AKAN MUNCUL OTOMATIS -->
+    </ul>
+  </li>
             <li><a href="#">Ekonomi</a></li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
@@ -169,6 +174,7 @@
 
     <script src="scrip.js"></script>
     <script src="api.js"></script>
+    <script src="microsite.js"></script>
 </body>
 
 </html>
