ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </a></li>
                 <li><a href="index.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="halaman.html">Lampost</a></li>
+                <li><a href="beranda.html">Beranda</a></li>
             </ul>
         </div>
         <div class="button-user">
@@ -37,12 +37,12 @@
     <nav class="navbar-sub">
         <ul>
             <li><a href="#">Politik</a></li>
-             <li class="has-sub">
-    <a href="#">Pendidikan</a>
-    <ul class="sub-menu" id="sub-pendidikan">
-      <!-- SUB AKAN MUNCUL OTOMATIS -->
-    </ul>
-  </li>
+            <li class="has-sub">
+                <a href="#">Pendidikan</a>
+                <ul class="sub-menu" id="sub-pendidikan">
+                    <!-- SUB AKAN MUNCUL OTOMATIS -->
+                </ul>
+            </li>
             <li><a href="#">Ekonomi</a></li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
@@ -132,10 +132,10 @@
     </div>
     <footer class="footer">
         <div class="sosmed">
-            <a href="#"><i class="bi bi-instagram"></i>Instagram</a>
-            <a href="#"><i class="bi bi-facebook"></i>Fecebook</a>
-            <a href="#"><i class="bi bi-twitter-x"></i></i>Twitter</a>
-            <a href="#"><i class="bi bi-tiktok"></i>Tiktok</a>
+            <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
+            <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
+            <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
+            <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
         </div>
         <div class="footer-container">
 
@@ -172,9 +172,9 @@
     </footer>
 
 
-    <script src="scrip.js"></script>
-    <script src="api.js"></script>
-    <script src="microsite.js"></script>
+    <script src="js/scrip.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/microsite.js"></script>
 </body>
 
 </html>
