--- a/halaman.html
+++ b/halaman.html
@@ -21,7 +21,7 @@
                     </a></li>
                 <li><a href="index.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="halaman.html">Lampost</a></li>
+                <li><a href="beranda.html">Beranda</a></li>
             </ul>
         </div>
         <div class="button-user">
@@ -104,10 +104,10 @@
     </div>
     <footer class="footer">
         <div class="sosmed">
-            <a href="#"><i class="bi bi-instagram"></i>Instagram</a>
-            <a href="#"><i class="bi bi-facebook"></i>Fecebook</a>
-            <a href="#"><i class="bi bi-twitter-x"></i></i>Twitter</a>
-            <a href="#"><i class="bi bi-tiktok"></i>Tiktok</a>
+            <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
+            <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
+            <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
+            <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
         </div>
         <div class="footer-container">
 
@@ -142,9 +142,9 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-    <script src="scrip.js"></script>
-    <script src="voice.js"></script>
-    <script src="detail.js"></script>
+    <script src="js/voice.js"></script>
+    <script src="js/detail.js"></script>
+    <script src="js/microsite.js"></script>
 </body>
 
 </html>
