--- a/beranda.html
+++ b/beranda.html
@@ -86,6 +86,9 @@
         </div>
         <div class="berita-beranda">
             <h2>Berita Terkini</h2>
+            <div class="berita-terbaru">
+
+            </div>
             <div class="info">
 
             </div>
@@ -101,6 +104,10 @@
                 <p>#Prabowo</p>
             </div>
         </div>
+    </div>
+    <div class="berita-terpopuler">
+        <h2>Lampung</h2>
+
     </div>
     <footer class="footer">
         <div class="sosmed">
@@ -148,6 +155,8 @@
     <script src="js/api.js"></script>
     <script src="js/microsite.js"></script>
     <script src="js/hukum.js"></script>
+    <script src="js/terbaru.js"></script>
+    <script src="js/populer.js"></script>
 </body>
 
 </html>
