ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                 <p>#Akal ImitasiMuzakir Manaf</p>
                 <p>#Prabowo</p>
             </div>
+            <!-- <div class="epeper">
+                <h2>Koran Digital</h2>
+            </div> -->
             <div class="hiburan">
                 <h2>Hiburan</h2>
             </div>
@@ -161,6 +164,7 @@
 
 
     <script src="js/olahraga.js"></script>
+    <script src="js/scrip.js"></script>
     <script src="js/api.js"></script>
     <script src="js/hiburan.js"></script>
     <script src="js/hukum.js"></script>
