--- a/halaman.html
+++ b/halaman.html
@@ -145,6 +145,7 @@
     <script src="js/voice.js"></script>
     <script src="js/detail.js"></script>
     <script src="js/microsite.js"></script>
+    <script src="js/scrip.js"></script>
 </body>
 
 </html>
