--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     <script src="js/populer.js"></script>
     <script src="js/humaniora.js"></script>
     <script src="js/opini.js"></script>
+    <script src="js/berita-left.js"></script>
 </body>
 
 </html>
