--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </ul>
         </div>
     </div>
+    <div class="iklan"></div>
     <div class="container-beranda">
         <div class="berita-left">
             <div class="olahraga">
