--- a/koran.html
+++ b/koran.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="halaman.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -37,12 +38,7 @@
     <nav class="navbar-sub">
         <ul>
             <li><a href="#">Politik</a></li>
-            <li class="has-sub">
-                <a href="#">Pendidikan</a>
-                <ul class="sub-menu" id="sub-pendidikan">
-                    <!-- SUB AKAN MUNCUL OTOMATIS -->
-                </ul>
-            </li>
+            <li><a href="#">Hukum</a></li>
             <li><a href="#">Ekonomi</a></li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
@@ -73,25 +69,27 @@
         </div>
     </div>
     <div class="container">
-        <div class="berita">
-            <h2>Harian</h2>
-            <p>Berita mendalam harian terbit empat kali sehari untuk memenuhi kebutuhan informasi Anda.</p>
-            <div class="card-berita">
-                
-            </div>
-            <!-- DETAIL -->
-            <div class="card-detail">
-                <div class="detail-image"></div>
-                <div class="detail-text">
-                    <h2 class="detail-title"></h2>
-                    <p class="detail-content"></p>
-                    <div class="detail-action"></div>
-                </div>
-            </div>
-            <div class="info">
+        <div class="berita" id="berita">
+            <h1 class="judul-berita"></h1>
 
-            </div>
+            <p class="meta-berita">
+                Oleh <strong>Lampost</strong> |
+                <span id="tanggal"></span>
+                <button id="voiceToggle" class="voice-btn">
+                    <i class="bi bi-volume-up"></i>
+                </button>
+            </p>
+
+            <img class="gambar-berita">
+
+            <div class="isi-berita"></div>
+
+            <a href="index.html" class="baca-selengkapnya">
+                Baca berita terkait lainnya
+            </a>
         </div>
+
+
         <div class="iklan">
             <div class="tagar">
                 <h3>TOPIK TRENDING</h3>
@@ -144,11 +142,9 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-
-
+    <script src="js/voice.js"></script>
+    <script src="js/harian.js"></script>
     <script src="js/scrip.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/berita-left.js"></script>
 </body>
 
 </html>
