--- a/harian.html
+++ b/harian.html
@@ -75,7 +75,7 @@
     <div class="container">
         <div class="berita">
             <h2>Harian</h2>
-            <p>Berita mendalam harian terbit empat kali sehari untuk memenuhi kebutuhan informasi Anda.</p>
+            <p>Berita mendalam harian yang terbit sekali sehari untuk memenuhi kebutuhan informasi Anda.</p>
             <div class="card-berita">
                 
             </div>
