--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
     <nav class="navbar-sub">
         <ul>
             <li><a href="#">Politik</a></li>
-            <li class="has-sub">
-                <a href="#">Pendidikan</a>
-                <ul class="sub-menu" id="sub-pendidikan">
-                    <!-- SUB AKAN MUNCUL OTOMATIS -->
-                </ul>
-            </li>
+            <li><a href="#">Pendidikan</a></li>
             <li><a href="#">Ekonomi</a></li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
@@ -73,7 +68,11 @@
             </ul>
         </div>
     </div>
-    <div class="iklan"></div>
+    <div class="iklan-showcase">
+        <a href="https://s.id/Lampostco">
+            <img src="image/ads_showcase.jpg" alt="img" class="iklan-image">
+        </a>
+    </div>
     <div class="container-beranda">
         <div class="berita-left">
             <div class="olahraga">
