--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                 <li><a href="#"><i class="bi bi-image-fill"></i> Foto</a></li>
                 <li><a href="#"><i class="bi bi-camera-video"></i> Vidio</a></li>
                 <li><a href="#"><i class="bi bi-mic"></i> Podcase</a></li>
-                <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li>
+                <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li></br>
+                <li><a href="harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
+                <li><a href="#"><i class="bi bi-calendar3"></i> Mingguan</a></li>
+                <li><a href="index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
             </ul>
         </div>
     </div>
