--- a/index.html
+++ b/index.html
@@ -98,14 +98,11 @@
             </div>
         </div>
         <div class="iklan">
+            <h2>Koran Digital</h2>
             <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+                <a href="harian.html">
+                    <img src="image/EPAPER-LAMPUNG-POST-2024-01-01.webp" alt="img" class="epaper-image">
+                </a>
             </div>
             <!-- <div class="epeper">
                 <h2>Koran Digital</h2>
