--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             </ul>
         </div>
     </div>
-    <div class="iklan-showcase">
-        <a href="https://s.id/Lampostco">
-            <img src="image/ads_showcase.jpg" alt="img" class="iklan-image">
+    <div class="iklan-gambar">
+        <a href="#">
+            <img src="image/baner-unioil.jpg" alt="img" class="gambar">
         </a>
     </div>
     <div class="container-beranda">
@@ -92,6 +92,11 @@
             <h2>Berita Terkini</h2>
             <div class="berita-terbaru">
 
+            </div>
+            <div class="iklan-showcase">
+                <a href="https://s.id/Lampostco">
+                    <img src="image/ads_showcase.jpg" alt="img" class="iklan-image">
+                </a>
             </div>
             <div class="info">
 
