--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar">
         <center>
-            <h2>Menu</h2>
+            <h2>MENU</h2>
         </center>
         <div class="search-sidebar">
             <input type="search" class="search-input" placeholder="Cari Artikel Disini" aria-label="Search">
@@ -79,17 +79,17 @@
     <div class="container-beranda">
         <div class="berita-left">
             <div class="olahraga">
-                <h2>Olahraga</h2>
+                <h2>OLAHRAGA</h2>
             </div>
             <div class="humaniora">
-                <h2>Humaniora</h2>
+                <h2>HUMANIORA</h2>
             </div>
             <div class="hukum">
-                <h2>Hukum</h2>
+                <h2>HUKUM</h2>
             </div>
         </div>
         <div class="berita-beranda">
-            <h2>Berita Terkini</h2>
+            <h2>BERITA TERKINI</h2>
             <div class="berita-terbaru">
 
             </div>
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="iklan">
-            <h2>Koran Digital</h2>
+            <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="harian.html">
                     <img src="image/EPAPER-LAMPUNG-POST-2024-01-01.webp" alt="img" class="epaper-image">
@@ -113,15 +113,15 @@
                 <h2>Koran Digital</h2>
             </div> -->
             <div class="hiburan">
-                <h2>Hiburan</h2>
+                <h2>HIBURAN</h2>
             </div>
             <div class="opini">
-                <h2>Kolom</h2>
+                <h2>KOLOM</h2>
             </div>
         </div>
     </div>
     <div class="lampung">
-        <h2>Lampung</h2>
+        <h2>LAMPUNG</h2>
         <div class="berita-terpopuler">
 
         </div>
