--- a/teknokrat.html
+++ b/teknokrat.html
@@ -75,8 +75,8 @@
     <div class="bener">
         <img src="image/banner-tekno.gif" alt="img" class="gif-tekno">
     </div>
-    <div class="container-beranda">
-        <div class="berita-beranda">
+    <div class="container-microweb">
+        <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
             <div class="berita-terbaru">
 
