--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="beranda.css">
-    <link rel="stylesheet" href="microweb.css">
-    <link rel="icon" href="image/logo.png" type="image/png">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../beranda.css">
+    <link rel="stylesheet" href="../microweb.css">
+    <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
 </head>
@@ -15,14 +15,14 @@
 <body>
     <nav class="navbar-main">
         <div class="logo">
-            <img src="image/lampost300.png (1).webp" alt="image" class="logo-img">
+            <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
             <ul>
                 <li><a href="#" id="btnMenu">
                         <i class="bi bi-list"></i> Menu
                     </a></li>
-                <li><a href="harian.html">Harian</a></li>
+                <li><a href="../harian.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="index.html">Beranda</a></li>
+                <li><a href="../index.html">Beranda</a></li>
             </ul>
         </div>
         <div class="button-user">
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="bener">
-        <img src="image/banner-tekno.gif" alt="img" class="gif-tekno">
+        <img src="../image/banner-tekno.gif" alt="img" class="gif-tekno">
     </div>
     <div class="container-microweb">
         <div class="berita-microweb">
@@ -88,8 +88,8 @@
         <div class="iklan">
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
-                <a href="harian.html">
-                    <img src="image/EPAPER-LAMPUNG-POST-2024-01-01.webp" alt="img" class="epaper-image">
+                <a href="../harian.html">
+                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image">
                 </a>
             </div>
             <!-- <div class="epeper">
@@ -145,7 +145,7 @@
     </footer>
 
 
-    <script src="js/teknokrat.js"></script>
+    <script src="../js/teknokrat.js"></script>
 </body>
 
 </html>
