ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="#">SD</a></li>
+                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="#">SMP</a></li>
                     <li><a href="#">SMA</a></li>
                     <li><a href="#">Perguruan Tinggi</a></li>
