--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -39,7 +39,15 @@
     <nav class="navbar-sub">
         <ul>
             <li><a href="#">Politik</a></li>
-            <li><a href="#">Pendidikan</a></li>
+            <li class="has-sub">
+                <a href="#">Pendidikan</a>
+                <ul class="sub-menu">
+                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="#">SMP</a></li>
+                    <li><a href="#">SMA</a></li>
+                    <li><a href="#">Perguruan Tinggi</a></li>
+                </ul>
+            </li>
             <li><a href="#">Ekonomi</a></li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
@@ -84,6 +92,14 @@
             <div class="home">
 
             </div>
+            <div class="iklan-microweb">
+                <a href="#">
+                    <img src="../image/PENERIMAAN-TEKNOKRAT.jpg" alt="image" class="img-iklan-microweb">
+                </a>
+            </div>
+            <div class="Pendidikan">
+
+            </div>
         </div>
         <div class="iklan">
             <h2>KORAN DIGITAL</h2>
@@ -92,9 +108,6 @@
                     <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image">
                 </a>
             </div>
-            <!-- <div class="epeper">
-                <h2>Koran Digital</h2>
-            </div> -->
             <div class="hiburan">
                 <h2>HIBURAN</h2>
             </div>
@@ -116,7 +129,7 @@
                 <center>
                     <p>Affiliated with:</p>
                 </center>
-                <img src="image/media.webp" alt="Logo">
+                <img src="../image/media.webp" alt="Logo">
             </div>
 
             <div class="footer-center">
@@ -146,6 +159,7 @@
 
 
     <script src="../js/teknokrat.js"></script>
+    <script src="../js/teknokrat.pendidikan.js"></script>
 </body>
 
 </html>
