ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
     <script src="js/humaniora.js"></script>
     <script src="js/opini.js"></script>
     <script src="js/berita-left.js"></script>
+    <script src="js/navbar.js"></script>
 </body>
 
 </html>
