--- a/koran.html
+++ b/koran.html
@@ -38,7 +38,15 @@
     <nav class="navbar-sub">
         <ul>
             <li><a href="#">Politik</a></li>
-            <li><a href="#">Hukum</a></li>
+            <li class="has-sub">
+                <a href="#">Pendidikan</a>
+                <ul class="sub-menu">
+                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="#">SMP</a></li>
+                    <li><a href="#">SMA</a></li>
+                    <li><a href="#">Perguruan Tinggi</a></li>
+                </ul>
+            </li>
             <li><a href="#">Ekonomi</a></li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
@@ -148,6 +156,7 @@
     <script src="js/voice.js"></script>
     <script src="js/harian.js"></script>
     <script src="js/scrip.js"></script>
+    <script src="js/navbar.js"></script>
 </body>
 
 </html>
