--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -160,6 +160,8 @@
 
     <script src="../js/teknokrat.js"></script>
     <script src="../js/teknokrat.pendidikan.js"></script>
+    <script src="../js/scrip.js"></script>
+    <script src="../js/navbar.js"></script>
 </body>
 
 </html>
