--- a/harian.html
+++ b/harian.html
@@ -39,8 +39,11 @@
             <li><a href="#">Politik</a></li>
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
-                <ul class="sub-menu" id="sub-pendidikan">
-                    <!-- SUB AKAN MUNCUL OTOMATIS -->
+                <ul class="sub-menu">
+                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="#">SMP</a></li>
+                    <li><a href="#">SMA</a></li>
+                    <li><a href="#">Perguruan Tinggi</a></li>
                 </ul>
             </li>
             <li><a href="#">Ekonomi</a></li>
@@ -152,6 +155,7 @@
     <script src="js/scrip.js"></script>
     <script src="js/api.js"></script>
     <script src="js/berita-left.js"></script>
+    <script src="js/navbar.js"></script>
 </body>
 
 </html>
