ini tampilan aja

--- a/microweb/berita.microweb.html
+++ b/microweb/berita.microweb.html
@@ -118,7 +118,7 @@
                 <center>
                     <p>Affiliated with:</p>
                 </center>
-                <img src="image/media.webp" alt="Logo">
+                <img src="../image/lampost300.png (1).webp" alt="Logo">
             </div>
 
             <div class="footer-center">
@@ -146,7 +146,7 @@
         </div>
     </footer>
     <script src="../js/voice.js"></script>
-    <script src="../js/detail.teknokrat.js"></script>
+    <script src="../js/teknokrat/detail.teknokrat.js"></script>
     <script src="../js/scrip.js"></script>
 </body>
 
