--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -108,11 +108,8 @@
                     <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image">
                 </a>
             </div>
-            <div class="hiburan">
-                <h2>HIBURAN</h2>
-            </div>
-            <div class="opini">
-                <h2>KOLOM</h2>
+            <div class="terbaru">
+                <h2>BERITA TERKINI</h2>
             </div>
         </div>
     </div>
@@ -123,24 +120,22 @@
             <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
             <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
         </div>
-        <div class="footer-container">
+        <div class="footer-microweb">
 
             <div class="footer-left">
                 <center>
-                    <p>Affiliated with:</p>
+                    <h3>Affiliated with:</h3>
                 </center>
-                <img src="../image/media.webp" alt="Logo">
+                <img src="../image/lampost300.png (1).webp" alt="Logo">
+                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
+                    Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
+                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
+                    108 Rajabasa, Bandar Lampung.</p>
             </div>
 
             <div class="footer-center">
-                <h4>Sitemap</h4>
-                <a href="#">Beranda</a>
-                <a href="#">Tentang Kami</a>
-                <a href="#">Compro</a>
-                <a href="#">Ilkan</a>
-                <a href="#">Microsite</a>
-                <a href="#">RRS</a>
-                <a href="#">Pedoman Media Siber</a>
+                <center><h3>UNIVERSITAS TEKNOKRAT INDONESIA</h3></center>
+                <img src="../image/logo-uti.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
@@ -158,10 +153,11 @@
     </footer>
 
 
-    <script src="../js/teknokrat.js"></script>
-    <script src="../js/teknokrat.pendidikan.js"></script>
+    <script src="../js/teknokrat/teknokrat.js"></script>
+    <script src="../js/teknokrat/teknokrat.pendidikan.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
+    <script src="../js/teknokrat/terbaru.js"></script>
 </body>
 
 </html>
