ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                     <img src="image/ads_showcase.jpg" alt="img" class="iklan-image">
                 </a>
             </div>
+            <div class="berita-mobile">
+                <h2>EKONOMI DAN BISNIS</h2>
+                <div class="ekonomi">
+                </div>
+                <div class="teknologi">
+                    <h2>TEKNOLOGI</h2>
+                </div>
+            </div>
             <div class="info">
 
             </div>
@@ -187,6 +195,8 @@
     <script src="js/opini.js"></script>
     <script src="js/berita-left.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/ekonomi.js"></script>
+    <script src="js/teknologi.js"></script>
 </body>
 
 </html>
